--- a/CustomerRelationshipManager/CustomerRelationshipManager/appsettings.json
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CRMDbConnection": "server=(localdb)\\MSSQLLocalDB;database=CustomerRelationManagerDB;Trusted_Connection=true"
+  }
 }
