--- a/CustomerRelationshipManager/CustomerRelationshipManager/appsettings.json
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "MyHiddenFromWorldSecret"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
