Configure request processing pipeline to require authentication from users

--- a/CustomerRelationshipManager/CustomerRelationshipManager/CustomerRelationshipManager.csproj
+++ b/CustomerRelationshipManager/CustomerRelationshipManager/CustomerRelationshipManager.csproj
@@ -7,18 +7,18 @@
   <ItemGroup>
     <Compile Remove="Migrations\20191214224301_InitialMigration.cs" />
     <Compile Remove="Migrations\20191214224301_InitialMigration.Designer.cs" />
+    <Compile Remove="Migrations\20191221225555_TokenColumn.cs" />
+    <Compile Remove="Migrations\20191221225555_TokenColumn.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
   </ItemGroup>
 
 </Project>
